@@ -1,3 +1,8 @@
+2005-01-26 17:26 Mike Park  <mike.park@nasa.gov>
+
+	* src/grid.c (gridCostConstraint,gridSetCostConstraint) added
+	methods to allow the cost metric constraints to changed on the fly.
+
 2005-01-26 13:20 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridLineSearchUV) Renamed from gridOptimizeUV to
